# swipeType

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  index.html
apps/mac/: build_log.txt  project.yml
apps/mac/Sources/SwipeTypeMac/App/: AppDelegate.swift  AppSettings.swift  AppState.swift  SwipeTypeMacApp.swift
apps/mac/Sources/SwipeTypeMac/Services/: PermissionManager.swift  TextInsertionService.swift
apps/mac/Sources/SwipeTypeMac/Views/: ContentView.swift  OverlayPanel.swift  SettingsView.swift
apps/web/www/: index.html
crates/swipe-engine/src/: ffi.rs  lib.rs  types.rs
scripts/: release.sh  sync_version.sh
src/: index.html  lib.rs
